# unsafety-propogation-graph

./: .gitmodules  Cargo.toml
.github/workflows/: deploy.yaml
src/: adt.rs  analyze_fn_def.rs  fn_info.rs  info_adt.rs  info_fn.rs  info_mod.rs  main.rs  output.rs  utils.rs
tests/: entry.rs  simple.rs
tests/pass/: constructors.rs  constructors.stdout  free-functions.rs  free-functions.stdout  plain-places.stdout  poc.rs  poc.stderr  poc.stdout  simple.rs  simple.stdout  struct-methods.rs  struct-methods.stdout  struct_methods.stdout  variant-idx.rs  variant-idx.stdout
ui/: nuxt.config.ts  package-lock.json  package.json
ui/app/: app.vue
ui/app/assets/css/: main.css
ui/app/components/: Flow.vue  UPG.vue
ui/app/components/code/: Src.vue
ui/app/components/widget/: SelectPanel.vue  Top.vue  TopBar.vue
ui/app/lib/: output.ts  panel.ts  topbar.ts
upg/app/: app.vue
upg/app/components/: Flow.vue  UPG.vue
upg/app/components/code/: Mir.vue  Src.vue
upg/app/lib/: output.ts
