[package]
name = "unsafety-propogation-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2.12.1", features = ["serde"] }

[dev-dependencies]
compiletest_rs = { git = "https://github.com/Manishearth/compiletest-rs.git", rev = "02b1226", features = [
  "rustc",
] }

[package.metadata.rust-analyzer]
rustc_private = true
