[package]
name = "unsafety-propagation-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2.12.1", features = ["serde"] }
derive_more = { version = "2.1.1", features = ["display", "debug"] }
safety-parser = { git = "https://github.com/Artisan-Lab/tag-std", rev = "302e096" }

[dev-dependencies]
compiletest_rs = { git = "https://github.com/Manishearth/compiletest-rs.git", rev = "02b1226", features = [
  "rustc",
] }

[package.metadata.rust-analyzer]
rustc_private = true
